--- a/audio_spectro.html
+++ b/audio_spectro.html
@@ -2,129 +2,143 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>14-Band Log Spectrum Analyzer</title>
+  <title>Audio Spectrum Analyzer with Smoothing</title>
   <style>
+    body {
+      background-color: black;
+      margin: 0;
+      overflow: hidden;
+      color: white;
+      font-family: sans-serif;
+    }
     canvas {
-      width: 100%;
-      height: 420px;
-      background: black;
       display: block;
+    }
+    #controls {
+      position: absolute;
+      top: 10px;
+      right: 10px;
+      background: rgba(0,0,0,0.5);
+      padding: 10px;
+      border-radius: 8px;
+    }
+    label {
+      font-size: 14px;
+    }
+    input[type="range"] {
+      width: 150px;
     }
   </style>
 </head>
 <body>
-  <h2 style="text-align:center;">14-Band Logarithmic Spectrum Analyzer</h2>
-  <canvas id="spectrum"></canvas>
+<canvas id="spectrum"></canvas>
 
-  <script>
-    const canvas = document.getElementById('spectrum');
-    const ctx = canvas.getContext('2d');
+<div id="controls">
+  <label for="smoothing">Smoothing: <span id="smoothingValue">0.8</span></label><br>
+  <input type="range" id="smoothing" min="0" max="1" step="0.01" value="0.8">
+</div>
+
+<script>
+  const canvas = document.getElementById('spectrum');
+  const ctx = canvas.getContext('2d');
+  const smoothingSlider = document.getElementById('smoothing');
+  const smoothingValueLabel = document.getElementById('smoothingValue');
+
+  function resizeCanvas() {
     canvas.width = window.innerWidth;
-    canvas.height = 420;
+    canvas.height = window.innerHeight;
+  }
 
-    async function setupAudio() {
-      const stream = await navigator.mediaDevices.getUserMedia({ audio: true });
-      const audioCtx = new (window.AudioContext || window.webkitAudioContext)();
-      const source = audioCtx.createMediaStreamSource(stream);
-      const analyser = audioCtx.createAnalyser();
+  window.addEventListener('resize', resizeCanvas);
+  resizeCanvas();
 
-      analyser.fftSize = 2048;
-      const bufferLength = analyser.frequencyBinCount;
-      const dataArray = new Uint8Array(bufferLength);
-      const timeDomainData = new Uint8Array(analyser.fftSize);
+  navigator.mediaDevices.getUserMedia({ audio: true }).then(stream => {
+    const audioCtx = new (window.AudioContext || window.webkitAudioContext)();
+    const analyser = audioCtx.createAnalyser();
+    const mic = audioCtx.createMediaStreamSource(stream);
+    const gainNode = audioCtx.createGain();
 
-      source.connect(analyser);
+    mic.connect(gainNode);
+    gainNode.connect(analyser);
 
-      function getLogBands(minFreq, maxFreq, bands) {
-        const logBands = [];
-        const logMin = Math.log10(minFreq);
-        const logMax = Math.log10(maxFreq);
-        const logStep = (logMax - logMin) / bands;
+    analyser.fftSize = 2048;
+    analyser.smoothingTimeConstant = parseFloat(smoothingSlider.value);
+    const bufferLength = analyser.frequencyBinCount;
+    const dataArray = new Uint8Array(bufferLength);
 
-        for (let i = 0; i < bands; i++) {
-          const startFreq = Math.pow(10, logMin + i * logStep);
-          const endFreq = Math.pow(10, logMin + (i + 1) * logStep);
-          logBands.push({ startFreq, endFreq });
-        }
-        return logBands;
+    smoothingSlider.addEventListener('input', () => {
+      analyser.smoothingTimeConstant = parseFloat(smoothingSlider.value);
+      smoothingValueLabel.textContent = smoothingSlider.value;
+    });
+
+    function draw() {
+      requestAnimationFrame(draw);
+      analyser.getByteFrequencyData(dataArray);
+
+      ctx.clearRect(0, 0, canvas.width, canvas.height);
+
+      const barCount = Math.floor(canvas.width / 10);
+      const barWidth = canvas.width / barCount;
+      const maxHeight = canvas.height * 0.8;
+      const logBase = Math.log10(bufferLength);
+
+      // Vertical grid lines
+      ctx.strokeStyle = 'rgba(255,255,255,0.05)';
+      for (let i = 0; i < barCount; i += Math.floor(barCount / 10)) {
+        const x = i * barWidth;
+        ctx.beginPath();
+        ctx.moveTo(x, 0);
+        ctx.lineTo(x, canvas.height);
+        ctx.stroke();
       }
 
-      function draw() {
-        requestAnimationFrame(draw);
+      // Horizontal grid lines (decibel scale)
+      for (let i = 0; i <= 5; i++) {
+        const y = canvas.height - (i / 5) * maxHeight;
+        ctx.strokeStyle = 'rgba(255,255,255,0.05)';
+        ctx.beginPath();
+        ctx.moveTo(0, y);
+        ctx.lineTo(canvas.width, y);
+        ctx.stroke();
 
-        analyser.getByteFrequencyData(dataArray);
-        analyser.getByteTimeDomainData(timeDomainData);
-
-        ctx.fillStyle = 'black';
-        ctx.fillRect(0, 0, canvas.width, canvas.height);
-
-        // Draw dB scale
         ctx.fillStyle = 'white';
-        ctx.font = '12px Arial';
-        const dbSteps = [0, -10, -20, -30, -40, -50, -60, -70, -80];
-        dbSteps.forEach((db, i) => {
-          const y = canvas.height - 40 - (i * (canvas.height - 80) / dbSteps.length);
-          ctx.fillText(`${db} dB`, 5, y);
-          ctx.strokeStyle = 'gray';
-          ctx.beginPath();
-          ctx.moveTo(50, y);
-          ctx.lineTo(canvas.width, y);
-          ctx.stroke();
-        });
-
-        // Logarithmic 14-band spectrum
-        const bandCount = 14;
-        const bands = getLogBands(20, 20000, bandCount);
-        const nyquist = audioCtx.sampleRate / 2;
-        const freqStep = nyquist / bufferLength;
-        const bandWidth = (canvas.width - 60) / bandCount;
-
-        bands.forEach((band, i) => {
-          const startIndex = Math.floor(band.startFreq / freqStep);
-          const endIndex = Math.min(Math.floor(band.endFreq / freqStep), bufferLength);
-          let sum = 0;
-          for (let j = startIndex; j < endIndex; j++) {
-            sum += dataArray[j];
-          }
-          const avg = sum / (endIndex - startIndex || 1);
-          const barHeight = (avg / 255) * (canvas.height - 80);
-
-          const hue = (i / bandCount) * 360;
-          const x = 60 + i * bandWidth;
-          ctx.fillStyle = `hsl(${hue}, 100%, 50%)`;
-          ctx.fillRect(x, canvas.height - barHeight - 40, bandWidth - 4, barHeight);
-          ctx.strokeStyle = 'black';
-          ctx.strokeRect(x, canvas.height - barHeight - 40, bandWidth - 4, barHeight);
-
-          // Frequency label
-          const labelFreq = Math.sqrt(band.startFreq * band.endFreq); // geometric mean
-          ctx.fillStyle = 'white';
-          ctx.textAlign = 'center';
-          ctx.fillText(`${labelFreq >= 1000 ? (labelFreq / 1000).toFixed(1) + 'k' : Math.round(labelFreq)}Hz`, x + bandWidth / 2 - 2, canvas.height - 25);
-        });
-
-        // Volume meter
-        let sumSquares = 0;
-        for (let i = 0; i < timeDomainData.length; i++) {
-          const normalized = (timeDomainData[i] - 128) / 128;
-          sumSquares += normalized * normalized;
-        }
-        const rms = Math.sqrt(sumSquares / timeDomainData.length);
-        const volume = rms * canvas.width;
-
-        ctx.fillStyle = 'lime';
-        ctx.fillRect(0, canvas.height - 20, volume, 10);
-        ctx.strokeStyle = 'white';
-        ctx.strokeRect(0, canvas.height - 20, canvas.width, 10);
+        ctx.fillText(`${-i * 20} dB`, 5, y - 2);
       }
 
-      draw();
+      // Spectrum bars
+      for (let i = 0; i < barCount; i++) {
+        const logIndex = Math.floor(Math.pow(10, i / (barCount / logBase)));
+        const value = dataArray[logIndex];
+        const percent = value / 255;
+        const barHeight = percent * maxHeight;
+
+        const hue = i * 360 / barCount;
+        ctx.fillStyle = `hsl(${hue}, 100%, 50%)`;
+        ctx.fillRect(i * barWidth, canvas.height - barHeight, barWidth - 2, barHeight);
+      }
+
+      // Volume Meter
+      const volume = dataArray.reduce((a, b) => a + b, 0) / bufferLength;
+      const db = 20 * Math.log10(volume / 255);
+      ctx.fillStyle = 'lime';
+      ctx.fillRect(10, 10, Math.max(0, volume * 2), 20);
+      ctx.fillStyle = 'white';
+      ctx.fillText(`Volume: ${db.toFixed(1)} dB`, 10, 45);
+
+      // Frequency Labels
+      ctx.fillStyle = 'white';
+      ctx.font = '12px sans-serif';
+      for (let i = 0; i < barCount; i += Math.floor(barCount / 10)) {
+        const freq = Math.floor(audioCtx.sampleRate * Math.pow(10, i / (barCount / logBase)) / analyser.fftSize);
+        ctx.fillText(`${freq}Hz`, i * barWidth, canvas.height - 5);
+      }
     }
 
-    setupAudio().catch(err => {
-      alert('Microphone access denied or not supported.');
-      console.error(err);
-    });
-  </script>
+    draw();
+  }).catch(err => {
+    alert('Microphone access denied.');
+    console.error(err);
+  });
+</script>
 </body>
 </html>
